# mcserverwrapper

./: .gitignore  .pylintrc  MANIFEST.in  README.md  info_getter.py  main.py  mcserverwrapper.bat  pyproject.toml  requirements.txt  server.py  tests.py  wrapper.py
.github/workflows/: define-pylint.yml  define-pytest.yml  pylint.yml  release_package.yml  run-pylint.yml  run-pytest.yml  run-tests.yml
TestServer/: .console_history  eula.txt  logfile.txt  mcserverlogs.txt  ops.json  paper.yml  server.properties  spigot.yml  start_testserver.bat  start_testserver_nowrapper.bat  usercache.json  version_history.json
TestServer/crash-reports/: crash-2022-04-04_18.42.40-server.txt
TestServer/plugins/bStats/: config.yml
TestServer/world/: level.dat_old
TestServer/world/advancements/: 8f7e487c-3375-4410-aaee-a13fcf68fc6e.json  a13ee8e9-6cd7-4def-81df-c010a0dd8e92.json
TestServer/world/entities/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  (+11 more)
TestServer/world_nether/: level.dat_old
TestServer/world_the_end/: level.dat_old
TestServerModded/: eula.txt  mcserverlogs.txt  ops.json  server.properties  start_testservermodded.bat  start_testservermodded_nowrapper.bat  usercache.json  usernamecache.json
TestServerModded/world/: level.dat_old
examples/: example_01.py
mcserverwrapper/: __init__.py  main.py
mcserverwrapper/src/: __init__.py  error.py  info_getter.py  logger.py  mcversion.py  server.py  server_properties_helper.py  wrapper.py
mcserverwrapper/test/: conftest.py  fixtures.py  helpers.py  test_server_properties_helper.py  test_wrapper.py  testable_thread.py
(+54 files in other folders)
