[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcserverwrapper"
version = "0.0.1"
authors = [
  { name="Ableytner", email="ableytner@gmx.at" },
]
description = "A wrapper for minecraft servers, usable as a python package or from the console."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "requests",
    "pexpect",
    "mcstatus",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
    "bs4",
    "pylint",
    "javascript",
]

[project.urls]
Repository = "https://github.com/mcserver-tools/mcserverwrapper"
"Bug Tracker" = "https://github.com/mcserver-tools/mcserverwrapper/issues"
